Fix chat wall bottom border radius issue on small devices

--- a/src/assets/scss/core/elements/chat/_wall.scss
+++ b/src/assets/scss/core/elements/chat/_wall.scss
@@ -16,7 +16,8 @@
 	max-width: 100vw;
 	height: 800px;
 	max-height: 95%; // 95vh
-	border-radius: $wallBorderRadius;
+	border-top-right-radius: $wallBorderRadius;
+	border-top-left-radius: $wallBorderRadius;
 	background-color: $wallBgColor;
 	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.12), 0 0 6px rgba(0, 0, 0, 0.18);
 	// overflow: auto;
